feat: add translation-comments route
