# internal/core/dtos/api_dtos.gen.go
@@ -3,6 +3,17 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.9.1 DO NOT EDIT.
 package dto
 
+import (
+	"time"
+)
+
+// CommentDTO defines model for CommentDTO.
+type CommentDTO struct {
+	CreatedAt time.Time `json:"createdAt"`
+	Text      string    `json:"text"`
+	UserId    string    `json:"userId"`
+}
+
 // The payload body to create a new project
 type CreateProjectRequestBody struct {
 	Name string `json:"name"`
@@ -13,6 +24,12 @@ type CreateProjectTranslationRequestBody struct {
 	Code string `json:"code"`
 	Key  string `json:"key"`
 	Text string `json:"text"`
+}
+
+// The payload body to create a comment for a translation key
+type CreateTranslationCommentRequestBody struct {
+	Text   string `json:"text"`
+	UserId string `json:"userId"`
 }
 
 // The payload body to delete translations for a key
@@ -60,6 +77,7 @@ type TranslationDTO struct {
 
 // TranslationKeyDTO defines model for TranslationKeyDTO.
 type TranslationKeyDTO struct {
+	Id        string           `json:"id"`
 	Key       string           `json:"key"`
 	Languages []TranslationDTO `json:"languages"`
 }
@@ -91,11 +109,23 @@ type ProjectTranslationsGetResponse struct {
 	Translations []TranslationKeyDTO `json:"translations"`
 }
 
+// TranslationCommentsGetResponse defines model for TranslationCommentsGetResponse.
+type TranslationCommentsGetResponse struct {
+	// The total amount of comments for the translation key
+	Total int `json:"total"`
+
+	// The list of comments
+	Translations *[]CommentDTO `json:"translations,omitempty"`
+}
+
 // PostProjectJSONBody defines parameters for PostProject.
 type PostProjectJSONBody CreateProjectRequestBody
 
 // PutProjectJSONBody defines parameters for PutProject.
 type PutProjectJSONBody EditProjectRequestBody
+
+// PostCommentJSONBody defines parameters for PostComment.
+type PostCommentJSONBody CreateTranslationCommentRequestBody
 
 // DeleteProjectTranslationsJSONBody defines parameters for DeleteProjectTranslations.
 type DeleteProjectTranslationsJSONBody DeleteProjectTranslationRequestBody
@@ -117,6 +147,9 @@ type PostProjectJSONRequestBody PostProjectJSONBody
 
 // PutProjectJSONRequestBody defines body for PutProject for application/json ContentType.
 type PutProjectJSONRequestBody PutProjectJSONBody
+
+// PostCommentJSONRequestBody defines body for PostComment for application/json ContentType.
+type PostCommentJSONRequestBody PostCommentJSONBody
 
 // DeleteProjectTranslationsJSONRequestBody defines body for DeleteProjectTranslations for application/json ContentType.
 type DeleteProjectTranslationsJSONRequestBody DeleteProjectTranslationsJSONBody
